@startuml DriveCare_Classes_Main
skinparam shadowing false
skinparam classAttributeIconSize 0

package "DriveCareCore - Entity Framework" {
  class User {
    +RowId : Guid
    +Login : string
    +Email : string
    +Phone : string
  }
  class Employee {
    +RowId : Guid
    +Login : string
    +WorkshopId : Guid?
  }
  class Role {
    +RowId : Guid
    +Name : string
  }
  class Workshop {
    +RowId : Guid
    +Name : string
    +CompanyId : Guid
  }
  class Company {
    +RowId : Guid
    +Name : string
  }
  class Car {
    +RowId : Guid
    +Vin : string
    +ModelId : Guid
  }
  class Task {
    +RowId : Guid
    +Title : string
    +EmployeeId : Guid
    +ClientUserId : Guid?
    +CarId : Guid?
  }
  class StoreOrder {
    +RowId : Guid
    +OrderNumber : string
    +TotalAmount : decimal
  }
  User "1" -- "*" UserCar
  Car "1" -- "*" UserCar
  Employee "*" -- "1" Workshop
  Workshop "*" -- "1" Company
  Task "*" -- "1" Employee
  Task "*" -- "0..1" User : client
  Task "*" -- "0..1" Car
  User "*" -- "*" Role
  Employee "*" -- "*" Role
}

package "DriveCareCore - Services" {
  class AppConnect {
    {static} +model1 : DriveCareDBEntities
  }
  class WorkshopMessagingService
  class StoreOrderService
  class ActivityEventService
  class WorkshopOnlineBookingService
  class PhotoTcpStorageService
  class StatisticsQueryService
}

package "DriveCare - Client WPF" {
  class AppState
  class MessagesPage
  class StoreCheckoutPage
  class BuyCarPage
}

package "DriveCarePro - Workshop WPF" {
  class ProHomePage
  class EmployeeTaskCardPage
  class StatisticsPage
  class WorkshopMessagesPage
}

WorkshopMessagingService ..> AppConnect
StoreOrderService ..> AppConnect
ActivityEventService ..> AppConnect
MessagesPage ..> WorkshopMessagingService
EmployeeTaskCardPage ..> Task
StatisticsPage ..> StatisticsQueryService
StatisticsQueryService ..> AppConnect
@enduml
